--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-notification": "^1.3.20",
     "vue-router": "^4.5.0",
